--- a/src/.config/waybar/style.css
+++ b/src/.config/waybar/style.css
@@ -11,8 +11,9 @@
 }
 
 window#waybar {
-    background-color: rgba(50, 50, 50, 0.9);
-    border-bottom: 3px solid rgba(100, 114, 125, 0.5);
+    /* background-color: rgba(50, 50, 50, 0.9);*/
+    background-color: #000000;
+    border-bottom: 1px solid rgba(100, 114, 125, 0.5);
     color: #ffffff;
     transition-property: background-color;
     transition-duration: .5s;
