--- a/src/.config/waybar/style.css
+++ b/src/.config/waybar/style.css
@@ -5,7 +5,7 @@
     font-family: "Roboto Mono Medium", Helvetica, Arial, sans-serif;
 
     /* adjust font-size value to your liking: */
-    font-size: 18px;
+    font-size: 14px;
 
     min-height: 0;
 }
@@ -66,7 +66,9 @@ window#waybar.chromium {
 }
 
 #mode {
-    background-color: #ff4136;
+    /*background-color: #ff4136;*/
+    background-color: #ffffff;
+    color: #ffffff;
     border-bottom: 3px solid #ffffff;
 }
 
