--- a/src/.config/waybar/style.css
+++ b/src/.config/waybar/style.css
@@ -13,8 +13,8 @@
 window#waybar {
     /* background-color: rgba(50, 50, 50, 0.9);*/
     background-color: #000000;
-    border-bottom: 1px solid rgba(100, 114, 125, 0.5);
-    color: #ffffff;
+    /*border-bottom: 1px solid rgba(100, 114, 125, 0.5);*/
+    color: #FFFFFF;
     transition-property: background-color;
     transition-duration: .5s;
     border-radius: 0;
@@ -45,7 +45,7 @@ window#waybar.chromium {
 #workspaces button {
     padding: 0 0.4em;
     background-color: transparent;
-    color: #ffffff;
+    color: #FFFFFF;
     /* Use box-shadow instead of border so the text isn't offset */
     box-shadow: inset 0 -3px transparent;
 }
@@ -53,12 +53,12 @@ window#waybar.chromium {
 /* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
 #workspaces button:hover {
     background: rgba(0, 0, 0, 0.2);
-    box-shadow: inset 0 -3px #ffffff;
+    box-shadow: inset 0 -3px #FFFFFF;
 }
 
 #workspaces button.focused {
     background-color: #0074D9;
-    box-shadow: inset 0 -3px #ffffff;
+    box-shadow: inset 0 -3px #FFFFFF;
 }
 
 #workspaces button.urgent {
@@ -194,7 +194,8 @@ label:focus {
 }
 
 #tray {
-    background-color: #2980b9;
+    /* background-color: #0074D9; */
+    background-color: #000000;
 }
 
 #idle_inhibitor {
